fixes logo alignment

--- a/custom.css
+++ b/custom.css
@@ -1,15 +1,19 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css?family=Mystery+Quest');
+@import url('https://fonts.googleapis.com/css?family=Mystery+Quest|Nova+Round');
 
 .wrapper {
   min-height: calc(100vh -50px);
 }
 .navbar-default {
   background-color: #f88d3d;
+  height: 50px;
+}
+.nav.navbar-nav {
+  margin-left: 30px;
 }
 .nav.navbar-nav li a {
   color: white;
-  font-family: mystery-quest;
+  font-family: 'Mystery Quest', cursive;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -17,7 +21,7 @@
 
 .nav.navbar-nav li a:visted {
   color: white;
-  font-family: mystery-quest;
+  font-family: 'Mystery Quest', cursive;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -25,7 +29,7 @@
 
 .nav.navbar-nav li a:hover {
   color: #7f5e46;
-  font-family: mystery-quest;
+  font-family: 'Mystery Quest', cursive;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -33,7 +37,7 @@
 
 .nav.navbar-nav li a:active {
   color: #7f5e46;
-  font-family: mystery-quest;
+  font-family: 'Mystery Quest', cursive;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -41,7 +45,7 @@
 
 h1 {
   color: #7f5e46;
-  font-family: mystery-quest;
+  font-family: 'Mystery Quest', cursive;
   font-style: normal;
   font-weight: 400;
   font-size: 50px;
@@ -67,19 +71,19 @@ footer {
   margin-top: 9px;
 }
 tbody tr .h2 {
-  font-family: mystery-quest;
+  font-family: 'Mystery Quest', cursive;
   font-style: normal;
   font-weight: 400;
   font-size: 36px;
 }
 tbody tr .h3 {
-  font-family: nova-round;
+  font-family: 'Nova Round', cursive;
   font-style: normal;
   font-weight: 400;
   font-size: 26px;
 }
 tbody tr .h4 {
-  font-family: nova-round;
+  font-family: 'Nova Round', cursive;
   font-style: normal;
   font-weight: 400;
   font-size: 23px;
@@ -98,6 +102,23 @@ tbody tr .h4 {
   border: none;
 }
 
+.navbar-brand {
+  padding: 0;
+  height: 100%;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  padding-left: 20px;
+}
+
+.navbar-header {
+  height: 50px;
+}
+
+.navbar-brand img {
+  width: 100%;
+}
 @media (max-width: 767px) {
   .container-fluid .navbar-header .navbar-toggle.collapsed {
     background-color: #bdc866;
